Changed tmux deliminators and NERDTree settings

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -29,7 +29,7 @@ set-option -g message-fg blue
 set-option -g message-attr dim
 
 # Statusline
-TMUX_DIVIDER="#[fg=default] // "
+TMUX_DIVIDER="#[fg=default] | "
 TMUX_WINDOW_FORMAT="#{window_index} #{window_name}"
 
 set-option -g status-style fg=default,bg=black
@@ -41,7 +41,7 @@ set-option -g status-justify left
 
 set-option -g window-status-format "$TMUX_WINDOW_FORMAT"
 set-option -g window-status-current-format "$TMUX_WINDOW_FORMAT"
-set-option -g window-status-separator " / "
+set-option -g window-status-separator " | "
 
 set-option -g window-status-current-fg green
 set-option -g window-status-current-attr bold
